master and worker working
flink-statefun master and worker are apparently working well, now need to deploy aggregator-app python and test that everything works right end2end.

--- a/kubernetes/flink-operator/flink-cluster-templates/netflow/consumer-driver-statefun/method1/flink-cluster-k8s/values.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/netflow/consumer-driver-statefun/method1/flink-cluster-k8s/values.yaml
@@ -39,5 +39,5 @@ worker:
 module:
   functions: normfuncs/aggregatorApp
   url_path_template: http://aggregatorapp-python:8060/statefun
-  kafka_address: kafka:9092
+  kafka_address: kafka-service:9092
 
