Aggregator application tested and everything working fine with flink-statefun cluster
Need to check one error in the python aggregation application
Also changed structure of some files so the aggregator app is not duplicated

--- a/kubernetes/flink-operator/flink-cluster-templates/netflow/consumer-driver-statefun/aggregator/templates/aggregatorapp.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/netflow/consumer-driver-statefun/aggregator/templates/aggregatorapp.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: aggregatorapp-python-container
-          image: httpd:latest
+          image: kubernetes:31320/python-aggregator-app:latest
           ports:
             - containerPort: 8060
 ---
