--- a/kubernetes/flink-operator/flink-cluster-templates/netflow/consumer-driver-statefun/method1/flink-cluster-k8s/values.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/netflow/consumer-driver-statefun/method1/flink-cluster-k8s/values.yaml
@@ -34,10 +34,10 @@ worker:
   image: apache/flink-statefun:3.2.0 # replace with your image
   jvm_mem: 1g
   container_mem: 1.5Gi
-  replicas: 2
+  replicas: 1
 
 module:
   functions: normfuncs/aggregatorApp
-  url_path_template: http://aggregatorapp-python:8060/statefun
+  url_path_template: http://aggregatorapp-python-service:8060/statefun
   kafka_address: kafka-service:9092
 
