fix documentation and version
fix the installation in the documentation change version of flink-statefun to 3.2.0 in docker image

--- a/docker/statefun-apps/Dockerfile
+++ b/docker/statefun-apps/Dockerfile
@@ -14,7 +14,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM apache/flink-statefun
+FROM apache/flink-statefun:3.2.0
 
 RUN mkdir -p /opt/statefun/modules/aggregatorApp
 ADD module.yaml /opt/statefun/modules/aggregatorApp
