--- a/kubernetes/flink-statefun-standalone/method1/flink-cluster-k8s/templates/master-rest-service.yaml
+++ b/kubernetes/flink-statefun-standalone/method1/flink-cluster-k8s/templates/master-rest-service.yaml
@@ -18,7 +18,7 @@ kind: Service
 metadata:
   name: {{.Values.master.name}}-rest
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: rest
       port: 8081
