--- a/docker/data-lake-explorer/pyproject.toml
+++ b/docker/data-lake-explorer/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Ignacio Dominguez Martinez-Casanueva <i.dominguezm@alumnos.upm.es>"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-semantic-tools = "^0.1.0"
+semantic-tools = ">=0.1.0"
 lxml = "^4.7.1"
 
 [tool.poetry.dev-dependencies]
