Dockerize telemetry-explorer

--- a/.env
+++ b/.env
@@ -20,8 +20,10 @@ NIFI_PASSWORD=ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
 
 # CLARITY information
 DATA_LAKE_EXPLORER_SUBSCRIPTION_ID=urn:ngsi-ld:Subscription:DataLake:data-lake-explorer-subs
-#DATA_LAKE_EXPLORER_URI=http://data-lake-explorer:8080/notify
 DATA_LAKE_EXPLORER_URI=http://data-lake-explorer:8080/notify
+
+TELEMETRY_EXPLORER_SUBSCRIPTION_ID=urn:ngsi-ld:Subscription:Device:telemetry-explorer-subs
+TELEMETRY_EXPLORER_URI=http://telemetry-explorer:8080/notify
 
 # PALANTIR information
 KAFKA_OUTPUT_TOPIC_GOFLOW2=flows
