Migrate app-manager to redis-based storage for CLARITY

--- a/.env
+++ b/.env
@@ -15,6 +15,11 @@ FLINK_MANAGER_URI=http://flink-jobmanager:8081
 NIFI_URI=https://nifi:8443/nifi-api
 NIFI_USERNAME=admin
 NIFI_PASSWORD=ctsBtRBKHRAx69EqUghvvgEvjnaLjFEB
+
+# Redis information
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=redis
 #
 ######
 
