--- a/docker/app-manager/pyproject.toml
+++ b/docker/app-manager/pyproject.toml
@@ -6,11 +6,8 @@ authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-semantic-tools = "^0.1.0"
-fastapi = "^0.74.1"
-uvicorn = "^0.17.5"
-aiofiles = "^0.8.0"
-python-multipart = "^0.0.5"
+semantic-tools = ">=0.1.0"
+redis = "^4.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
