Implement logic for GnmiCollector orchestration in weaver
- Find template IDs and jar IDs from Redis
- Register flow IDs and job IDs in Redis
- Update docker-compose-clarity to include redis service
- Move client wrappers from semantic-tools to orchestration sub-module in weaver
- Deprecate checking.py and health.py code from weaver
- Include ngsi-ld data models for pipelines in semantic-tools
- Deprecate applications.py due to new ngsi-ld data models
- Implement logic for application configuration in applications sub-module
- Update ceos-arista configuration with admin password

--- a/docker-compose-clarity.yml
+++ b/docker-compose-clarity.yml
@@ -46,7 +46,7 @@ services:
     depends_on:
       - scorpio
   eureka:
-    image: scorpiobroker/scorpio:eureka-server_2.1.1
+    image: scorpiobroker/scorpio:eureka-server_2.1.13
     hostname: eureka
     container_name: eureka
     ports:
@@ -196,7 +196,7 @@ services:
     hostname: redis
     container_name: redis
     environment:
-      - REDIS_PASSWORD=redis
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
       - "6379"
   scorpio:
@@ -241,10 +241,14 @@ services:
       - NIFI_USERNAME=${NIFI_USERNAME}
       - NIFI_PASSWORD=${NIFI_PASSWORD}
       - WEAVER_URI=${WEAVER_URI}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
       - "8080"
     volumes:
       - ./docker/weaver/weaver:/opt/sda/weaver/weaver
+      - ./gnmi/gnmic-cfgs:/gnmic-cfgs
     depends_on:
       - nifi
       - scorpio
