--- a/docker/ceos-arista/r2/startup-config.cfg
+++ b/docker/ceos-arista/r2/startup-config.cfg
@@ -1,6 +1,6 @@
 
 hostname r2
-username admin privilege 15 secret xxxx
+username admin privilege 15 secret admin
 !
 interface Management0
    ip address 172.16.238.12/24
