--- a/docker/ceos-arista/r1/startup-config.cfg
+++ b/docker/ceos-arista/r1/startup-config.cfg
@@ -1,6 +1,6 @@
 
 hostname r1
-username admin privilege 15 secret xxxx
+username admin privilege 15 secret admin
 !
 interface Management0
    ip address 172.16.238.11/24
