--- a/docker/weaver/pyproject.toml
+++ b/docker/weaver/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-semantic-tools = "^0.1.0"
+semantic-tools = ">=0.1.0"
 fastapi = "^0.74.1"
 uvicorn = "^0.17.5"
+redis = "^4.3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
