--- a/consumers/clarity-data-lake/data-lake-explorer/pyproject.toml
+++ b/consumers/clarity-data-lake/data-lake-explorer/pyproject.toml
@@ -2,7 +2,7 @@
 name = "data-lake-explorer"
 version = "0.1.0"
 description = ""
-authors = ["Ignacio Dominguez Martinez-Casanueva <i.dominguezm@alumnos.upm.es>"]
+authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
@@ -13,7 +13,7 @@ fastapi = {extras = ["all"], version = "^0.78.0"}
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 flake8 = ">=4.0.1"
-semantic-tools = { path = "../../semantic-tools", develop = true }
+semantic-tools = { path = "../../../../semantic-tools", develop = true }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
