Remove remaining old docker paths

--- a/sources/kafka/source-manager/Dockerfile
+++ b/sources/kafka/source-manager/Dockerfile
@@ -25,17 +25,17 @@ RUN python -m venv /venv
 RUN mkdir -p /opt/semantic-tools
 COPY semantic-tools /opt/semantic-tools
 # Copy app artifacts
-COPY docker/${APP_NAME}/pyproject.toml docker/${APP_NAME}/poetry.lock ./
+COPY sources/kafka/${APP_NAME}/pyproject.toml sources/kafka/${APP_NAME}/poetry.lock ./
 RUN poetry export -f requirements.txt --without-hashes | /venv/bin/pip install -r /dev/stdin
 
-COPY docker/${APP_NAME}/ .
+COPY sources/kafka/${APP_NAME}/ .
 RUN poetry build && /venv/bin/pip install dist/*.whl
 
 FROM base as final
 
 COPY --from=builder /venv /venv
 COPY --from=builder ${APP_DIR} .
-COPY docker/${APP_NAME}/docker-entrypoint.sh .
+COPY sources/kafka/${APP_NAME}/docker-entrypoint.sh .
 RUN chmod +x docker-entrypoint.sh
 
 CMD ["./docker-entrypoint.sh"]
