--- a/kubernetes/flink-operator/flink-cluster-templates/netflow/source-driver/flinkoperator-flinkjobcluster-netflow.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/netflow/source-driver/flinkoperator-flinkjobcluster-netflow.yaml
@@ -36,7 +36,7 @@ spec:
   job:
     jarFile: /opt/flink/usrlib/netflow-driver-1.0.jar
     className: tid.NetflowDriver
-    args: ["kafka-service:9092", "netflow-output-json"]
+    args: ["kafka-service:9092", "flows", "uni-flows"]
     parallelism: 2
     restartPolicy: Never
   flinkProperties:
