--- a/docker/weaver/pyproject.toml
+++ b/docker/weaver/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["GIROS-DIT UPM <gi.giros@upm.es>"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
+flink-client = { git = "https://github.com/giros-dit/python-flink-client.git", branch = "main" }
 semantic-tools = ">=0.1.0"
 fastapi = "^0.74.1"
 uvicorn = "^0.17.5"
