Migrate SDA services to new ngsi-ld-client

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 #  SDA services information
 #
 APP_MANAGER_URI=http://app-manager:8080
-BROKER_URI=http://gateway:9090
+BROKER_URI=http://gateway:9090/ngsi-ld/v1
 CONTEXT_CATALOG_URI=http://context-catalog:8080/context.jsonld
 EXPERIMENTER_URI=http://experimenter:8080/notify
 WEAVER_URI=http://weaver:8080/notify
