--- a/docker/telemetry-explorer/pyproject.toml
+++ b/docker/telemetry-explorer/pyproject.toml
@@ -10,6 +10,7 @@ semantic-tools = ">=0.1.0"
 pygnmi = "^0.6.9"
 ncclient = "^0.6.13"
 fastapi = {extras = ["all"], version = "^0.78.0"}
+ngsi-ld-client = { git = "https://github.com/giros-dit/python-ngsi-ld-client.git", branch = "main" }
 
 
 [tool.poetry.dev-dependencies]
