Added everything needed to be able to test latency in flink applications
Added to docker an event generator used to generate events from one of the files in pipeline-flows
Add latency-tester folder inside kubernetes that contains themplates for event-generator and two applications, each one of them will go at the ends of the flink application to be tested
Created template for new application latency-consumer-CDS which include output necessary to later correlate input and output of the application so Latency can be tested
Created folder netflow-full-pipeline which contains a Helm Chart to deploy a full netflow pipeline

--- a/kubernetes/flink-operator/flink-cluster-templates/flink-testers/latency-tester/latencyA/flinkoperator-flinkjobcluster-netflow.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/flink-testers/latency-tester/latencyA/flinkoperator-flinkjobcluster-netflow.yaml
@@ -28,7 +28,7 @@ spec:
         memory: "2048Mi"
         cpu: "500m"
   taskManager:
-    replicas: 1
+    replicas: 2
     resources:
       limits:
         memory: "2048Mi"
@@ -36,7 +36,7 @@ spec:
   job:
     jarFile: /opt/flink/usrlib/FlinkLatencyA-1.0.jar
     className: tid.FlinkLatencyA
-    args: ["kafka-service:9092", "topicA", "flows", "flowStart"]
+    args: ["kafka-service:9092", "netflow-aggregated", "topicA", "flowStart"]
     parallelism: 2
     restartPolicy: Never
   flinkProperties:
