--- a/kubernetes/flink-operator/flink-cluster-templates/flink-testers/latency-tester/latencyB/flinkoperator-flinkjobcluster-netflow.yaml
+++ b/kubernetes/flink-operator/flink-cluster-templates/flink-testers/latency-tester/latencyB/flinkoperator-flinkjobcluster-netflow.yaml
@@ -28,7 +28,7 @@ spec:
         memory: "2048Mi"
         cpu: "500m"
   taskManager:
-    replicas: 1
+    replicas: 2
     resources:
       limits:
         memory: "2048Mi"
@@ -36,7 +36,7 @@ spec:
   job:
     jarFile: /opt/flink/usrlib/FlinkLatencyB-1.0.jar
     className: tid.FlinkLatencyB
-    args: ["kafka-service:9092", "uni-flows", "flowEnd"]
+    args: ["kafka-service:9092", "CDS", "flowEnd"]
     parallelism: 2
     restartPolicy: Never
   flinkProperties:
