Modified CDS to follow actual PALANTIR Schemas
Modified CDS to follow actual PALANTIR Schema and output the proposed schema
Modified kubernetes template to add arguments
created a directory with samples for CDS

--- a/kubernetes/crypto_detector/crypto_detection.yaml
+++ b/kubernetes/crypto_detector/crypto_detection.yaml
@@ -17,6 +17,7 @@ spec:
         image: kubernetes:31320/crypto-detector-system
         ports:
         - containerPort: 12000
+        args: ["-b", "kafka-palantir:9092", "-c", "cds-input", "-p", "cds-result"]
 ---
 apiVersion: v1
 kind: Service
