--- a/docker/crypto-detector/docker-compose.yml
+++ b/docker/crypto-detector/docker-compose.yml
@@ -12,17 +12,18 @@ services:
       - "9092:9092"
     environment:
       KAFKA_ADVERTISED_HOST_NAME: localhost
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
-      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_ADVERTISED_PORT: 9092
+      # KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
+      # KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
+      # KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      # KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "entrada:1:1,salida:1:1"
-  crypto_detector:
-    image: crypto_detector # Build this image with the Dockerfile: "docker build -t crypto_detector:latest ."
-    hostname: crypto_detector
-    container_name: crypto_detector
-    ports:
-      - "12000:12000"
-    command: ["-b", "kafka:9092", "-c", "entrada", "-p", "salida"]
+  # crypto_detector:
+  #   image: crypto_detector # Build this image with the Dockerfile: "docker build -t crypto_detector:latest ."
+  #   hostname: crypto_detector
+  #   container_name: crypto_detector
+  #   ports:
+  #     - "12000:12000"
+  #   command: ["-b", "kafka:9092", "-c", "entrada", "-p", "salida", "-m", "local"]
     
