--- a/kubernetes/crypto_detector/crypto_detection.yaml
+++ b/kubernetes/crypto_detector/crypto_detection.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: crypto-service
-        image: crypto_detector
+        image: kubernetes:31320/crypto-detector:latest
         imagePullPolicy: Never
         ports:
         - containerPort: 12000
