--- a/kubernetes/services/kafka.yaml
+++ b/kubernetes/services/kafka.yaml
@@ -30,8 +30,8 @@ spec:
         #  value: "/tmp/kafka-logs"
         - name: KAFKA_BROKER_ID
           value: "0"
-        #- name: KAFKA_CREATE_TOPICS
-        #  value: test-topic
+        - name: KAFKA_CREATE_TOPICS
+          value: "flows:1:1,uni-flows:1:1,bidi-flows:1:1,netflow-aggregated:1:1,netflow-dcp:1:1"
 ---
 apiVersion: v1
 kind: Service
