Updating and fixing some minor changes about message logging and exceptions checking in the CDS and the consumer and producer testers. Also, a docker-compose for testing purpose has been created.

--- a/docker/crypto-detector/crypto-consumer/Dockerfile
+++ b/docker/crypto-detector/crypto-consumer/Dockerfile
@@ -6,5 +6,5 @@ WORKDIR /app
 COPY requirements.txt /app
 RUN pip install -r requirements.txt
 
-COPY consumer.py /app
-ENTRYPOINT ["python3", "/app/consumer.py"]
+COPY crypto-consumer.py /app
+ENTRYPOINT ["python3", "/app/crypto-consumer.py"]
